@@ -1,3 +1,7 @@
+2005-04-10    <tino@firebird.03.softkill.net>
+
+	* fatal.h (TINO_FATAL_IF): added
+
 2005-03-15    <tino@firebird.03.softkill.net>
 
 	* xd.h: include fixes, does not need fatal.h
